Major refactorings and bug fixes
- moved classes to correct packages
- fixed compiler state bug
- performance improved on definition
- proper use of indexed pojos in defintion and parsetype resolver (still
needs more work)
- moved hoverprovider completion resolve to completionprovider
- fixed issue with added modules on java 8 project
- fixed issue where index wasn't ready on hover
- fixed some tests and added some more